# langchain-concepts-projects

./: .env  01_langchain_massage.py  02_langchain_prompt.py  03_langchain_mamory.py  04_langchain_chains.py  05_langchain_tools.py  06_langchain_agents.py  07_gemeni_rag.py  08_rag_project.py  README.md  main.py  pyproject.toml
data/: data.txt
